--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> CSCE 190: Madison Putman</title>
+    </head>
+    <body>
+        <h1>Madison</h1>
+    </body>
+</html>
