--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     </head>
     <body>
         <h1>Madison</h1>
-            <div class="about"><h2>About me</h2><p>I will strive to use my skills ,education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p></div>
-            <div class="skills"><h2>Skills</h2></div>
-            <div class="projects"><h2>Highlighted projects</h2></div>
-            <div class="contact"><h2>Contact me</h2></div>
+            <div class="about">
+                <h2>About me</h2>
+                <p>I will strive to use my skills ,education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
+            </div>
+            <div class="skills">
+                <h2>Skills</h2>
+            </div>
+            <div class="projects">
+                <h2>Highlighted projects</h2>
+            </div>
+            <div class="contact">
+                <h2>Contact me</h2>
+            </div>
     </body>
 </html>
