--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Madison</h1>
+        <h1>Madison Putman</h1>
             <div class="about">
                 <h2>About me</h2>
                 <p>I will strive to use my skills ,education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
