--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <!--Problem Statement Assignment-->
                 <section class="project">
                     <a href="files/statement.pdf"><h3>Problem Statement</h3>
-                    <a href="files/sstatement.pdf"><img src"images/problem.png"></a>
-                    <p>One sentence to describe your problem</p>
+                    <a href="files/statement.pdf"><img src"images/problem.png"></a>
+                    <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
             </div>
             <div class="contact">
