--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <h2>Highlighted projects</h2>
                 <!--Problem Statement Assignment-->
                 <section class="project">
-                    <a href="files/statement.pdf"><h3>Problem Statement</h3>
-                    <a href="files/statement.pdf"><img src"images/problem.png"></a>
+                    <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><h3>Problem Statement</h3>
+                    <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><img src"ProblemStatement.png"></a>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
             </div>
