--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> CSCE 190: Madison Putman</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+<body>
         <h1>Madison Putman</h1>
             <div class="about">
                 <h2>About me</h2>
@@ -18,7 +14,7 @@
                 <!--Problem Statement Assignment-->
                 <section class="project">
                     <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><h3>Problem Statement</h3>
-                    <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><img src="ProblemStatement.png"></a>
+                    <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><img src="images/ProblemStatement.png"></a>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
             </div>
@@ -27,3 +23,5 @@
             </div>
     </body>
 </html>
+
+    
