style and  diagram added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
                     <a href="FINAL Problem Statement Assignment-Computing in the Modern World.pdf"><img src="images/ProblemStatement.png"></a>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
+                <!--Affinity Diagram Assignment-->
+                <section class="project">
+                    <a href="INFINITY DIAGRAM COMPUTING IN MODERN WORLD.pdf"><h3>Affinity Diagram</h3></a>
+                    <a href="INFINITY DIAGRAM COMPUTING IN MODERN WORLD.pdf"><img src="images/Affinity Diagram.png"></a>
+                    <p>
+                        Our Affinity Diagram focuses on 5 main aspects of our solution to the problem statement described above.
+                        These include outcome, the results of the solution; logistics, how the solution will be executed; goals, 
+                        what we hope to accomplish; app basics, the main attributes of the potential solution app; and reward system, 
+                        which explain the reward process.
+                    </p>
+                </section>
             </div>
             <div class="contact">
                 <h2>Contact me</h2>
