--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Madison Putman</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
         <h1>Madison Putman</h1>
             <div class="about">
