--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>Highlighted projects</h2>
                 <!--Problem Statement Assignment-->
                 <section class="project">
-                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
+                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3></a>
                     <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><img src="images/ProblemStatement.png"></a>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
