trying new image attempt

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <!--Problem Statement Assignment-->
                 <section class="project">
                     <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
-                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"></a><img src="images/SingleSentenceStatement.png">
+                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"></a><img src="SingleSentenceStatement.png">
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
                 </section>
                 <!--Affinity Diagram Assignment-->
                 <section class="project">
                     <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"><h3>Affinity Diagram</h3></a>
-                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"></a><img src="images/Affinity_Diagram.png">
+                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"></a><img src="Affinity_Diagram.png">
                     <p>
                         Our Affinity Diagram focuses on 5 main aspects of our solution to the problem statement described above.
                         These include outcome, the results of the solution; logistics, how the solution will be executed; goals, 
