--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                         which explain the reward process.
                     </p>
                 </section>
+                <!--Sketches Assignment-->
+                <section class="project">
+                    <a href="files/Sketches.pdf"><h3>Sketches</h3></a>
+                    <a href="files/Sketches.pdf"><img src="Sketch1.png"></a>
+                    <p>
+                        These sketches show the outline and overall theme of the app. 
+                        It showcases what each component and page should look like as 
+                        well as its function. 
+                    </p>
+                </section>
             </div>
             <div class="contact">
                 <h2>Contact me</h2>
