--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </section>
                 <!--Sketches Assignment-->
                 <section class="project">
-                    <a href="files/Sketches.pdf"><h3>Sketches</h3></a>
-                    <a href="files/Sketches.pdf"><img src="Sketch1.png"></a>
+                    <a href="Sketches.pdf"><h3>Sketches</h3></a>
+                    <a href="Sketches.pdf"><img src="Sketch1.png"></a>
                     <p>
                         These sketches show the outline and overall theme of the app. 
                         It showcases what each component and page should look like as 
