fix to sketches

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!--Sketches Assignment-->
                 <section class="project">
                     <a href="Sketches.pdf"><h3>Sketches</h3></a>
-                    <a href="Sketches.pdf"><img src="Sketch1.png"></a>
+                    <a href="Sketches.pdf"></a><img src="Sketch1.png">
                     <p>
                         These sketches show the outline and overall theme of the app. 
                         It showcases what each component and page should look like as 
