--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- this HTML content was created by ChatGPT -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Madison Putman — Resume</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="resume-container">
+    <header class="resume-header">
+      <div class="resume-avatar">MP</div>
+      <div class="resume-title">
+        <h1>Madison Putman</h1>
+        <p>Bachelor of Science — Computer Science (Interested in Cybersecurity)</p>
+        <p class="meta">GPA: 3.688 • South Carolina Honors College</p>
+      </div>
+      <div class="resume-contact">
+        <p>📞 +1 (803) 995-3214</p>
+        <p>✉️ <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a></p>
+        <p>🔗 <a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a></p>
+        <a class="download-btn" href="Putman_Computer Science_Resume (12).pdf" target="_blank">Download PDF</a>
+      </div>
+    </header>
 
+    <main class="resume-main">
+      <section class="resume-section">
+        <h2>Education</h2>
+        <p><strong>University of South Carolina — Columbia</strong> | Expected Graduation: May 2029</p>
+        <p>Honors College | GPA: 3.688 | Palmetto Fellows Scholarship, Dean’s Scholar</p>
+        <p><strong>White Knoll High School</strong> — Lexington, SC (May 2025)</p>
+      </section>
+
+      <section class="resume-section">
+        <h2>Skills</h2>
+        <ul class="skills-list">
+          <li>Python</li>
+          <li>Java</li>
+          <li>Microsoft Office 365</li>
+          <li>Google Drive</li>
+          <li>Windows</li>
+          <li>Typing</li>
+        </ul>
+      </section>
+
+      <section class="resume-section">
+        <h2>Relevant Projects</h2>
+        <p><strong>AP Computer Science Food Truck Program</strong> (Feb 2022)</p>
+        <ul>
+          <li>Developed a Python program to generate food orders and calculate total cost.</li>
+        </ul>
+      </section>
+
+      <section class="resume-section">
+        <h2>College Leadership</h2>
+        <p><strong>Student Government Freshman Council</strong> — Internal Affairs Coordinator (Sep 2025–Present)</p>
+        <ul>
+          <li>Led initiatives promoting leadership, academic success, and safety.</li>
+        </ul>
+      </section>
+
+      <section class="resume-section">
+        <h2>High School Leadership</h2>
+        <p><strong>Student Government Association</strong> — President (Aug 2021–Sep 2025)</p>
+        <ul>
+          <li>Represented student body at district and state levels.</li>
+          <li>Founded the “Order of the Timberwolf Gala.”</li>
+        </ul>
+      </section>
+    </main>
+  </div>
+</body>
+<footer= class="site-footer">
+Content created with help from ChatGPT
+</footer>
+</html>
