--- a/resume.html
+++ b/resume.html
@@ -9,27 +9,20 @@
 <body class="site-root">
 
   <div class="resume-wrap">
-    <header class="resume-header">
-      <div class="rh-left">
-        <div class="avatar">MP</div>
-        <div class="title-block">
-          <h1 class="name">Madison Putman</h1>
-          <p class="tagline">Bachelor of Science in Computer Science — South Carolina Honors College</p>
-          <p class="meta">Interested in Cybersecurity • GPA: 3.688 / 4.0</p>
-        </div>
-      </div>
 
-      <div class="rh-right">
-        <div class="contact-line"><a href="tel:+18039953214">+1 (803) 995-3214</a></div>
-        <div class="contact-line"><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a></div>
-        <div class="contact-line"><a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a></div>
-        <a class="download-btn" href="Putman_Computer Science_Resume (12).pdf" target="_blank" rel="noopener">Download PDF</a>
-      </div>
-    </header>
+<header class="resume-header">
+  <h1 class="name">Madison Putman</h1>
+  <div class="contact-info">
+    <span><a href="tel:+18039953214">+1 (803) 995-3214</a></span> |
+    <span><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a></span> |
+    <span><a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a></span>
+  </div>
+</header>
+<hr class="header-divider">
+
 
     <main class="resume-main">
       <section class="primary-col">
-        <!-- Education -->
         <article class="card">
           <h2>Education</h2>
           <div class="divider"></div>
@@ -44,7 +37,6 @@
           <p><strong>Honors & Awards:</strong> Student Body President, Graduation Commencement Speaker, James F. Byrnes Leadership Award Recipient, Lexington County Rotary Scholarship Recipient, Columbia Urban League Leadership Spotlight</p>
         </article>
 
-        <!-- Coursework -->
         <article class="card">
           <h2>Relevant Coursework</h2>
           <div class="divider"></div>
@@ -57,7 +49,6 @@
           </ul>
         </article>
 
-        <!-- Skills -->
         <article class="card">
           <h2>Skills</h2>
           <div class="divider"></div>
@@ -71,7 +62,6 @@
           </ul>
         </article>
 
-        <!-- Projects -->
         <article class="card">
           <h2>Relevant Projects</h2>
           <div class="divider"></div>
@@ -82,7 +72,6 @@
           </ul>
         </article>
 
-        <!-- College Leadership -->
         <article class="card">
           <h2>College Extracurricular & Leadership</h2>
           <div class="divider"></div>
@@ -105,7 +94,6 @@
           <p><strong>Other Organizations:</strong> Black Honors Caucus, Baptist Collegiate Ministry (BCM), Minorities in Computing, National Society of Black Engineers (NSBE)</p>
         </article>
 
-        <!-- High School Leadership -->
         <article class="card">
           <h2>High School Extracurricular & Leadership</h2>
           <div class="divider"></div>
