final resume changes

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,6 @@
 <header class="resume-header">
   <h1 class="name">Madison Putman</h1>
   <div class="contact-info">
-    <span><a href="tel:+18039953214">+1 (803) 995-3214</a></span> |
     <span><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a></span> |
     <span><a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a></span>
   </div>
@@ -118,7 +117,7 @@
     </main>
 
     <footer class="resume-footer">
-      Content created with help from ChatGPT
+      *Content created with help from ChatGPT
     </footer>
   </div>
 
