--- a/resume.html
+++ b/resume.html
@@ -2,124 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Madison Putman — Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="site-root">
+<body class="resume-page">
 
-  <div class="resume-wrap">
+  <div class="resume-container">
+    <header class="resume-header">
+      <h1>Madison Putman</h1>
+      <p class="contact">
+        <a href="tel:+18039953214">+1 (803) 995-3214</a> |
+        <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> |
+        <a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a>
+      </p>
+    </header>
 
-<header class="resume-header">
-  <h1 class="name">Madison Putman</h1>
-  <div class="contact-info">
-    <span><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a></span> |
-    <span><a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a></span>
-  </div>
-</header>
-<hr class="header-divider">
+    <hr>
 
+    <section>
+      <h2>Education</h2>
+      <p><strong>University of South Carolina — Columbia</strong></p>
+      <p>South Carolina Honors College | Expected Graduation: May 2029</p>
+      <p>Bachelor of Science in Computer Science | Interested in Cybersecurity | GPA: 3.688 / 4.0</p>
+      <p><em>Honors & Awards:</em> Palmetto Fellows Scholarship, Dean’s Scholar, First Generation Engineering Scholarship, USC STEM Supplement Scholarship</p>
 
-    <main class="resume-main">
-      <section class="primary-col">
-        <article class="card">
-          <h2>Education</h2>
-          <div class="divider"></div>
-          <h3>University of South Carolina — Columbia</h3>
-          <p><em>South Carolina Honors College • Expected Graduation: May 2029</em></p>
-          <p>Bachelor of Science in Computer Science — Interested in Cybersecurity</p>
-          <p><strong>Honors & Awards:</strong> Palmetto Fellows Scholarship, Dean’s Scholar, First Generation Engineering Scholarship, USC STEM Supplement Scholarship</p>
+      <p><strong>White Knoll High School — Lexington, SC</strong> (May 2025)</p>
+      <p><em>Honors & Awards:</em> Student Body President, Graduation Commencement Speaker, James F. Byrnes Leadership Award, Lexington County Rotary Scholarship, Columbia Urban League Leadership Spotlight</p>
+    </section>
 
-          <div class="divider"></div>
-          <h3>White Knoll High School — Lexington, SC</h3>
-          <p><em>Graduated May 2025</em></p>
-          <p><strong>Honors & Awards:</strong> Student Body President, Graduation Commencement Speaker, James F. Byrnes Leadership Award Recipient, Lexington County Rotary Scholarship Recipient, Columbia Urban League Leadership Spotlight</p>
-        </article>
+    <section>
+      <h2>Relevant Coursework</h2>
+      <ul>
+        <li>AP Calculus AB/BC</li>
+        <li>AP Computer Science Principles</li>
+        <li>Computing in the Modern World</li>
+        <li>Vector Calculus Honors</li>
+        <li>Algorithmic Design I Honors</li>
+      </ul>
+    </section>
 
-        <article class="card">
-          <h2>Relevant Coursework</h2>
-          <div class="divider"></div>
-          <ul class="tight-list">
-            <li>AP Calculus AB/BC</li>
-            <li>AP Computer Science Principles</li>
-            <li>Computing in the Modern World</li>
-            <li>Vector Calculus Honors</li>
-            <li>Algorithmic Design I Honors</li>
-          </ul>
-        </article>
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming Languages: Python, Java</li>
+        <li>Software Applications: Microsoft Office 365, Google Drive</li>
+        <li>Operating Systems: Windows XP</li>
+        <li>Other: Typing</li>
+      </ul>
+    </section>
 
-        <article class="card">
-          <h2>Skills</h2>
-          <div class="divider"></div>
-          <ul class="tight-list">
-            <li>Python</li>
-            <li>Java</li>
-            <li>Microsoft Office 365</li>
-            <li>Google Drive</li>
-            <li>Windows XP</li>
-            <li>Typing</li>
-          </ul>
-        </article>
+    <section>
+      <h2>Relevant Projects</h2>
+      <p><strong>AP Computer Science Food Truck Program</strong> (Feb 2022)</p>
+      <ul>
+        <li>Developed a Python program to generate food orders from a menu and calculate total costs.</li>
+      </ul>
+    </section>
 
-        <article class="card">
-          <h2>Relevant Projects</h2>
-          <div class="divider"></div>
-          <h3>AP Computer Science Food Truck Program</h3>
-          <p><em>February 2022</em></p>
-          <ul class="tight-list">
-            <li>Developed a Python program to generate food orders from a preselected menu and calculate total costs.</li>
-          </ul>
-        </article>
+    <section>
+      <h2>College Extracurricular & Leadership</h2>
+      <p><strong>Student Government Freshman Council — Internal Affairs Coordinator</strong> (Sept 2025 – Present)</p>
+      <ul>
+        <li>Worked with first-year students to promote leadership, academic success, and community involvement.</li>
+        <li>Created initiatives to promote health and safety on campus.</li>
+        <li>Maintained communication and team culture throughout the term.</li>
+      </ul>
 
-        <article class="card">
-          <h2>College Extracurricular & Leadership</h2>
-          <div class="divider"></div>
-          <h3>Student Government Freshman Council — Internal Affairs Coordinator</h3>
-          <p><em>September 2025 – Present</em></p>
-          <ul class="tight-list">
-            <li>Collaborate with first-year students to promote leadership, academic success, and community involvement.</li>
-            <li>Develop initiatives to promote health and safety on campus.</li>
-            <li>Maintain communication and strong team culture throughout the term.</li>
-          </ul>
+      <p><strong>University of South Carolina Visitors Center — University Ambassador</strong> (Sept 2025 – Present)</p>
+      <ul>
+        <li>Served as a resource for prospective students and families via campus tours and communications.</li>
+        <li>Provided a positive first impression of the university.</li>
+      </ul>
 
-          <div class="divider"></div>
-          <h3>University of South Carolina Visitors Center — University Ambassador</h3>
-          <p><em>September 2025 – Present</em></p>
-          <ul class="tight-list">
-            <li>Serve as a resource for prospective students and families through tours and outreach.</li>
-            <li>Provide a positive first impression of the University of South Carolina.</li>
-          </ul>
+      <p><em>Additional Organizations:</em> Black Honors Caucus, Baptist Collegiate Ministry (BCM), Minorities in Computing, National Society of Black Engineers (NSBE)</p>
+    </section>
 
-          <p><strong>Other Organizations:</strong> Black Honors Caucus, Baptist Collegiate Ministry (BCM), Minorities in Computing, National Society of Black Engineers (NSBE)</p>
-        </article>
+    <section>
+      <h2>High School Extracurricular & Leadership</h2>
+      <p><strong>Student Government Association — Student Body President</strong> (Aug 2021 – Sept 2025)</p>
+      <ul>
+        <li>Represented student body at district and state levels.</li>
+        <li>Led committees, fundraisers, and school events.</li>
+        <li>Founded the Order of the Timberwolf Gala (Oct 2024) recognizing community service leaders, attended by Senator Shealy.</li>
+      </ul>
 
-        <article class="card">
-          <h2>High School Extracurricular & Leadership</h2>
-          <div class="divider"></div>
-          <h3>Student Government Association — Student Body President</h3>
-          <p><em>August 2021 – September 2025</em></p>
-          <ul class="tight-list">
-            <li>Represented students at district and state levels.</li>
-            <li>Led committees, fundraisers, and official events.</li>
-            <li>Founded the Order of the Timberwolf Gala (October 2024) to recognize community leaders.</li>
-          </ul>
-
-          <div class="divider"></div>
-          <h3>Special Olympics — Youth Activation Council (YAC), South Carolina</h3>
-          <p><em>June 2023 – May 2025</em></p>
-          <ul class="tight-list">
-            <li>Served as youth representative promoting student involvement in Special Olympics.</li>
-            <li>Participated in leadership conferences and inclusion training.</li>
-            <li>Spokesperson for South Carolina’s “End the R Word” Rally and the Area 7 Spring Games.</li>
-          </ul>
-        </article>
-      </section>
-    </main>
-
-    <footer class="resume-footer">
-      *Content created with help from ChatGPT
-    </footer>
-  </div>
-
-</body>
-</html>
+      <p><strong>Special Olympics — Youth Activation Council (YAC), South Carolina</strong> (June 2023 – May 2025)</p>
+      <ul>
+        <li>Served as youth representative advocating for student involvement in Special Olympics.</li>
+        <li>Participated in leadership conferences and inclusion trai
