resume style change

--- a/resume.html
+++ b/resume.html
@@ -9,85 +9,119 @@
 <body class="resume-page">
 
   <div class="resume-container">
+    <!-- header -->
     <header class="resume-header">
-      <h1>Madison Putman</h1>
+      <h1 class="res-name">Madison Putman</h1>
       <p class="contact">
-        <a href="tel:+18039953214">+1 (803) 995-3214</a> |
         <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> |
-        <a href="https://www.linkedin.com/in/madison-putman" target="_blank">linkedin.com/in/madison-putman</a>
+        <a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman</a> |
+        <a class="download" href="/mnt/data/Putman_Computer Science_Resume (12).pdf" target="_blank" rel="noopener">Download PDF</a>
       </p>
     </header>
 
-    <hr>
+    <hr class="header-hr" />
 
-    <section>
-      <h2>Education</h2>
-      <p><strong>University of South Carolina — Columbia</strong></p>
-      <p>South Carolina Honors College | Expected Graduation: May 2029</p>
-      <p>Bachelor of Science in Computer Science | Interested in Cybersecurity | GPA: 3.688 / 4.0</p>
-      <p><em>Honors & Awards:</em> Palmetto Fellows Scholarship, Dean’s Scholar, First Generation Engineering Scholarship, USC STEM Supplement Scholarship</p>
+    <main class="res-main">
+      <!-- each section uses the same structure: <section><h2>Heading</h2><div>content...</div></section> -->
+      <section>
+        <h2>Education</h2>
+        <div>
+          <p><strong>University of South Carolina — Columbia</strong></p>
+          <p class="muted">South Carolina Honors College • Expected Graduation: May 2029</p>
+          <p>Bachelor of Science in Computer Science — Interested in Cybersecurity — GPA: 3.688 / 4.0</p>
+          <p><em>Honors &amp; Awards:</em> Palmetto Fellows Scholarship; Dean’s Scholar; First Generation Engineering Scholarship; USC STEM Supplement Scholarship</p>
 
-      <p><strong>White Knoll High School — Lexington, SC</strong> (May 2025)</p>
-      <p><em>Honors & Awards:</em> Student Body President, Graduation Commencement Speaker, James F. Byrnes Leadership Award, Lexington County Rotary Scholarship, Columbia Urban League Leadership Spotlight</p>
-    </section>
+          <div class="section-divider"></div>
 
-    <section>
-      <h2>Relevant Coursework</h2>
-      <ul>
-        <li>AP Calculus AB/BC</li>
-        <li>AP Computer Science Principles</li>
-        <li>Computing in the Modern World</li>
-        <li>Vector Calculus Honors</li>
-        <li>Algorithmic Design I Honors</li>
-      </ul>
-    </section>
+          <p><strong>White Knoll High School — Lexington, SC</strong> (May 2025)</p>
+          <p><em>Honors &amp; Awards:</em> Student Body President; Graduation Commencement Speaker; James F. Byrnes Leadership Award Recipient; Lexington County Rotary Scholarship; Columbia Urban League Leadership Spotlight</p>
+        </div>
+      </section>
 
-    <section>
-      <h2>Skills</h2>
-      <ul>
-        <li>Programming Languages: Python, Java</li>
-        <li>Software Applications: Microsoft Office 365, Google Drive</li>
-        <li>Operating Systems: Windows XP</li>
-        <li>Other: Typing</li>
-      </ul>
-    </section>
+      <section>
+        <h2>Relevant Coursework</h2>
+        <div>
+          <ul class="bulleted">
+            <li>AP Calculus AB/BC</li>
+            <li>AP Computer Science Principles</li>
+            <li>Computing in the Modern World</li>
+            <li>Vector Calculus (Honors)</li>
+            <li>Algorithmic Design I (Honors)</li>
+          </ul>
+        </div>
+      </section>
 
-    <section>
-      <h2>Relevant Projects</h2>
-      <p><strong>AP Computer Science Food Truck Program</strong> (Feb 2022)</p>
-      <ul>
-        <li>Developed a Python program to generate food orders from a menu and calculate total costs.</li>
-      </ul>
-    </section>
+      <section>
+        <h2>Skills</h2>
+        <div>
+          <ul class="bulleted">
+            <li>Programming: Python, Java</li>
+            <li>Software: Microsoft Office 365, Google Drive</li>
+            <li>Operating Systems: Windows XP</li>
+            <li>Other: Typing</li>
+          </ul>
+        </div>
+      </section>
 
-    <section>
-      <h2>College Extracurricular & Leadership</h2>
-      <p><strong>Student Government Freshman Council — Internal Affairs Coordinator</strong> (Sept 2025 – Present)</p>
-      <ul>
-        <li>Worked with first-year students to promote leadership, academic success, and community involvement.</li>
-        <li>Created initiatives to promote health and safety on campus.</li>
-        <li>Maintained communication and team culture throughout the term.</li>
-      </ul>
+      <section>
+        <h2>Relevant Projects</h2>
+        <div>
+          <p><strong>AP Computer Science — Food Truck Program</strong> (Feb 2022)</p>
+          <ul class="bulleted">
+            <li>Developed a Python program to generate food orders from a preselected menu and calculate total cost.</li>
+          </ul>
+        </div>
+      </section>
 
-      <p><strong>University of South Carolina Visitors Center — University Ambassador</strong> (Sept 2025 – Present)</p>
-      <ul>
-        <li>Served as a resource for prospective students and families via campus tours and communications.</li>
-        <li>Provided a positive first impression of the university.</li>
-      </ul>
+      <section>
+        <h2>College Extracurricular &amp; Leadership</h2>
+        <div>
+          <p><strong>Student Government Freshman Council — Internal Affairs Coordinator</strong> (Sept 2025 – Present)</p>
+          <ul class="bulleted">
+            <li>Work with first-year students to cultivate leadership, support student organizations, preserve campus traditions, and promote academic success &amp; community involvement.</li>
+            <li>Create initiatives to promote health &amp; safety on campus.</li>
+            <li>Maintain communication and team culture throughout the term.</li>
+          </ul>
 
-      <p><em>Additional Organizations:</em> Black Honors Caucus, Baptist Collegiate Ministry (BCM), Minorities in Computing, National Society of Black Engineers (NSBE)</p>
-    </section>
+          <div class="role-divider"></div>
 
-    <section>
-      <h2>High School Extracurricular & Leadership</h2>
-      <p><strong>Student Government Association — Student Body President</strong> (Aug 2021 – Sept 2025)</p>
-      <ul>
-        <li>Represented student body at district and state levels.</li>
-        <li>Led committees, fundraisers, and school events.</li>
-        <li>Founded the Order of the Timberwolf Gala (Oct 2024) recognizing community service leaders, attended by Senator Shealy.</li>
-      </ul>
+          <p><strong>University of South Carolina Visitors Center — University Ambassador</strong> (Sept 2025 – Present)</p>
+          <ul class="bulleted">
+            <li>Serve as a resource for prospective students and families through tours, phone calls, and emails.</li>
+            <li>Provide a positive first impression of the University of South Carolina.</li>
+          </ul>
 
-      <p><strong>Special Olympics — Youth Activation Council (YAC), South Carolina</strong> (June 2023 – May 2025)</p>
-      <ul>
-        <li>Served as youth representative advocating for student involvement in Special Olympics.</li>
-        <li>Participated in leadership conferences and inclusion trai
+          <p><em>Other memberships:</em> Black Honors Caucus; Baptist Collegiate Ministry (BCM); Minorities in Computing; National Society of Black Engineers (NSBE)</p>
+        </div>
+      </section>
+
+      <section>
+        <h2>High School Extracurricular &amp; Leadership</h2>
+        <div>
+          <p><strong>Student Government Association — Student Body President</strong> (Aug 2021 – Sept 2025)</p>
+          <ul class="bulleted">
+            <li>Served as the student body representative on district and state levels to advocate for students and community needs.</li>
+            <li>Led committees, meetings, fundraisers, and events/ceremonies.</li>
+            <li>Created and founded the Order of the Timberwolf Gala (Oct 2024) to recognize community service leaders; Senator Shealy attended.</li>
+          </ul>
+
+          <div class="role-divider"></div>
+
+          <p><strong>Special Olympics — Youth Activation Council (YAC), South Carolina</strong> (June 2023 – May 2025)</p>
+          <ul class="bulleted">
+            <li>Served as a youth representative advocating for student involvement within Special Olympics.</li>
+            <li>Participated in leadership conferences and training focused on inclusion and relationships with people with disabilities.</li>
+            <li>Served as spokesperson for events such as SC’s “End the R Word” Rally and Area 7 Spring Games.</li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="res-footer">
+      <hr />
+      <p><small>Content created with help from ChatGPT</small></p>
+    </footer>
+  </div>
+
+</body>
+</html>
