--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
             <li>Provide a positive first impression of the University of South Carolina.</li>
           </ul>
 
-          <p><em>Other memberships:</em> Black Honors Caucus; Baptist Collegiate Ministry (BCM); Minorities in Computing; National Society of Black Engineers (NSBE)</p>
+          <p>Other memberships: Black Honors Caucus; Baptist Collegiate Ministry (BCM); Minorities in Computing; National Society of Black Engineers (NSBE)</p>
         </div>
       </section>
 
