--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
     <header class="resume-header">
       <h1 class="res-name">Madison Putman</h1>
       <p class="contact">
-        <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> |
-        <a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman</a> |
+        <p>Email: </p><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> |
+        <p>LinkedIn: </p><a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman</a> |
         <a class="download" href="/mnt/data/Putman_Computer Science_Resume (12).pdf" target="_blank" rel="noopener">Download PDF</a>
       </p>
     </header>
@@ -119,7 +119,7 @@
 
     <footer class="res-footer">
       <hr />
-      <p><small>Content created with help from ChatGPT</small></p>
+      <p><small>*Content created with help from ChatGPT</small></p>
     </footer>
   </div>
 
