style test in resume

--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
     <header class="resume-header">
       <h1 class="res-name">Madison Putman</h1>
       <p class="contact">
-        <p>Email: </p><a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> |
-        <p>LinkedIn: </p><a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman</a> |
+        <p>Email: <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> </p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman</a> </p>
         <a class="download" href="/mnt/data/Putman_Computer Science_Resume (12).pdf" target="_blank" rel="noopener">Download PDF</a>
       </p>
     </header>
