--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Madison Putman</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class ="home-page">
         <h1>Madison Putman</h1>
         <p>West Columbia, South Carolina</p>
             <div class="about">
