--- a/index.html
+++ b/index.html
@@ -22,34 +22,40 @@
                 <h2>Highlighted projects</h2>
                 <!--Problem Statement Assignment-->
                 <section class="project">
-                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
                     <div class="image-wrap">
                     <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"></a><img src="SingleSentenceStatement.png">
                     </div>
+                    <div class="project-body">
+                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
                     <p>Because Chick-fil-A does not process GrubHub orders until customers check in, students experience long delays that make preordering ineffective and disrupt their class schedules.</p>
+                    </div>
                 </section>
                 <!--Affinity Diagram Assignment-->
                 <section class="project">
-                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"><h3>Affinity Diagram</h3></a>
                      <div class="image-wrap">
                     <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"></a><img src="Affinity_Diagram.png">
                      </div>
+                     <div class="project body">
+                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"><h3>Affinity Diagram</h3></a>
                     <p>
                         Our Affinity Diagram focuses on 5 main aspects of our solution to the problem statement described above.
                         These include outcome, the results of the solution; logistics, how the solution will be executed; goals, 
                         what we hope to accomplish; app basics, the main attributes of the potential solution app; and reward system, 
                         which explain the reward process.
                     </p>
+                    </div>
                 </section>
                 <!--Sketches Assignment-->
                 <section class="project">
-                    <a href="Sketches.pdf"><h3>Sketches</h3></a>
                     <a href="Sketches.pdf"></a><img src="Sketch1.png">
+                    <div class="project body">
+                    <a href="Sketches.pdf"><h3>Sketches</h3></a>
                     <p>
                         These sketches show the outline and overall theme of the app. 
                         It showcases what each component and page should look like as 
                         well as its function. 
                     </p>
+                    </div>
                 </section>
             </div>
             <div class="contact">
