--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
                     </p>
                     </div>
                 </section>
+                <!--Personal Code Repo Link-->
+                <section class="project">
+                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
+                    <h3>Algorithmic Design Final Project</h3>
+                    </a>
+                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
+                    <img src="zooSign.png">
+                    </a>
+                    <p>This is a zoo management system that allows the visitor to go to different exhibits and learn about a variety of animals. </p>
+                </section>
+
             </div>
             <div class="contact">
                 <h2>Contact me</h2>
