repo title change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!--Personal Code Repo Link-->
                 <section class="project">
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
-                    <h3>Algorithmic Design Final Project</h3>
+                    <h3>Algorithmic Design Zoo Managment Project</h3>
                     </a>
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
                     <img src="zooSign.png">
