--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!--Problem Statement Assignment-->
                 <section class="project">
                     <div class="image-wrap">
-                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"></a><img src="SingleSentenceStatement.png">
+                    <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><img src="SingleSentenceStatement.png"></a>
                     </div>
                     <div class="project-body">
                     <a href="FINAL_Problem_Statement_Assignment-Computing_in_the_Modern_World.pdf"><h3>Problem Statement</h3>
@@ -33,9 +33,9 @@
                 <!--Affinity Diagram Assignment-->
                 <section class="project">
                      <div class="image-wrap">
-                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"></a><img src="Affinity_Diagram.png">
+                    <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"><img src="Affinity_Diagram.png"></a>
                      </div>
-                     <div class="project body">
+                     <div class="project-body">
                     <a href="INFINITY_DIAGRAM_COMPUTING_IN_MODERN_WORLD.pdf"><h3>Affinity Diagram</h3></a>
                     <p>
                         Our Affinity Diagram focuses on 5 main aspects of our solution to the problem statement described above.
@@ -47,8 +47,8 @@
                 </section>
                 <!--Sketches Assignment-->
                 <section class="project">
-                    <a href="Sketches.pdf"></a><img src="Sketch1.png">
-                    <div class="project body">
+                    <a href="Sketches.pdf"><img src="Sketch1.png"></a>
+                    <div class="project-body">
                     <a href="Sketches.pdf"><h3>Sketches</h3></a>
                     <p>
                         These sketches show the outline and overall theme of the app. 
