style change/sketch change

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 </section>
                 <!--Sketches Assignment-->
                 <section class="project">
+                    <div class="image-wrap">
                     <a href="Sketches.pdf"><img src="Sketch1.png"></a>
+                    </div>
                     <div class="project-body">
                     <a href="Sketches.pdf"><h3>Sketches</h3></a>
                     <p>
