style/index change

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                 </section>
                 <!--Personal Code Repo Link-->
                 <section class="project">
+                    <div class="image-wrap">
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
                     <h3>Algorithmic Design Zoo Managment Project</h3>
                     </a>
+                    </div>
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
                     <img src="zooSign.png">
                     </a>
