--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
                 <section class="project">
                     <div class="image-wrap">
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
-                    <h3>Algorithmic Design Zoo Managment Project</h3>
                     </a>
                     </div>
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
                     <img src="zooSign.png">
                     </a>
-                    <p>This is a zoo management system that allows the visitor to go to different exhibits and learn about a variety of animals. </p>
+                     <div class="project-body">
+                         <h3>Algorithmic Design Zoo Managment Project</h3>
+                        <p>This is a zoo management system that allows the visitor to go to different exhibits and learn about a variety of animals. </p>
+                    </div>
                 </section>
 
             </div>
