--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <!--Personal Code Repo Link-->
                 <section class="project">
                     <div class="image-wrap">
-                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
+                    <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">                    <img src="zooSign.png">
+
                     </a>
                     </div>
                     <a href="https://github.com/CS-MadisonAP/CSCE145ZooManagement">
-                    <img src="zooSign.png">
                     </a>
                      <div class="project-body">
                          <h3>Algorithmic Design Zoo Managment Project</h3>
