--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>West Columbia, South Carolina</p>
             <div class="about">
                 <h2>About me</h2>
+                <img src="ProfessionalPic.JPG">
                 <p>I will strive to use my skills, education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
             </div>
             <div class="skills">
