--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <p>West Columbia, South Carolina</p>
             <div class="about">
                 <h2>About me</h2>
-                <img src="ProfessionalPic.JPG">
+                <div class="image-wrap">
+                    <img src="ProfessionalPic.JPG">
+                </div>
                 <p>I will strive to use my skills, education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
             </div>
             <div class="skills">
