--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         <p>West Columbia, South Carolina</p>
             <div class="about">
                 <h2>About me</h2>
-                <div class="image-wrap">
-                    <img src="ProfessionalPic.JPG">
-                </div>
+                <img src="ProfessionalPic.JPG" class="about-image">
                 <p>I will strive to use my skills, education, and servant leadership to provide protection and innovation through technology and everyday conduct; I want Jesus to be seen in all I do.</p>
             </div>
             <div class="skills">
