--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             </div>
             <div class="contact">
                 <h2>Contact me</h2>
+                <p>Email: <a href="mailto:putmanm@email.sc.edu">putmanm@email.sc.edu</a> LinkedIn: <a href="https://www.linkedin.com/in/madison-putman" target="_blank" rel="noopener">linkedin.com/in/madison-putman </p>
             </div>
     </body>
 </html>
